--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,229 @@
     transform: rotate(360deg);
   }
 }
+
+/* Global */
+
+@import url('https://fonts.googleapis.com/css?family=Work+Sans:200&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Work+Sans:900&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    outline: 0;
+    font-size: 100%;
+    vertical-align: baseline;
+}
+
+html {
+    font-family: proxima nov, sans-serif;
+}
+
+body {
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    background-size: cover;
+    overflow-y: scroll;
+}
+
+.wrapper {
+    width: 100%;
+    margin: 0;
+    justify-content: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+.topNav{
+    list-style:none;
+    padding: 12px;
+    text-align:center;
+}
+.topNav li{
+    display:inline;
+}
+.topNav a{
+    display:inline-block;
+    padding:18px;
+}
+
+.github {
+    display:inline-block;
+    background-image: url('./images/002-github.png');
+    background-repeat: no-repeat;
+    padding:18px;
+}
+
+.linkedin {
+    display:inline-block;
+    background-image: url('./images/linkedin.png');
+    background-repeat: no-repeat;
+    padding:18px;
+}
+.mail {
+    display:inline-block;
+    background-image: url('./images/003-mail.png');
+    background-repeat: no-repeat;
+    padding:18px;
+}
+/* Nav */
+
+nav {
+    height: 100px;
+    line-height: 100px;
+}
+
+nav a {
+    color: white;
+    text-decoration: none;
+}
+
+nav a img {
+    vertical-align: middle;
+}
+
+nav a:nth-child(2) {
+    float: right;
+}
+
+ /* Header */
+
+header {
+    margin: 100px 0 200px 0;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+}
+
+header p {
+    color: whitesmoke;
+    width: 45%;
+    margin: 15px auto 0 auto;
+    font-size: 18px;
+    font-family: 'Work Sans', sans-serif;
+}
+
+header h1 {
+    font-size: 50px;
+    color: whitesmoke;
+    font-family: 'Roboto', sans-serif;
+    letter-spacing: 8px;
+}
+
+/* DEMO-SPECIFIC STYLES */
+
+header p {
+    overflow: hidden; /* Ensures the content is not revealed until the animation */
+    border-right: .15em solid whitesmoke; /* The typwriter cursor */
+    white-space: nowrap; /* Keeps the content on a single line */
+    margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+    animation: 
+      typing 3.5s steps(30, end),
+      blink-caret .5s step-end infinite;
+}
+  
+  /* The typing effect */
+  @keyframes typing {
+    from { width: 0 }
+    to { width: 20% }
+  }
+  
+  /* The typewriter cursor effect */
+  @keyframes blink-caret {
+    from, to { border-color: transparent }
+    20% { border-color: whitesmoke }
+  }
+
+pic {
+    display: inline-block;
+}
+
+.seeProjects {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    position : absolute;
+    bottom: 190px;
+    color: white;
+    padding: 4px;
+}
+
+.projectsLink:hover {
+    text-decoration: underline;
+    letter-spacing: 1px;
+    padding: 5px;
+    cursor: pointer;
+    transition-duration: 0.4s;
+}
+
+/* What I Do */
+
+.whatIDo {
+    text-align: center;
+    margin: 100px 0 200px 0;
+    position: relative;
+}
+
+.whatIDo h1 {
+    color: #13A3FD;
+    font-size: 150px;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+    top: -20px;
+    z-index: -1;
+}
+
+/* Footer */
+
+footer {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    position : absolute;
+    bottom: 0;
+    margin: 20px 0;
+}
+
+footer p {
+    font-size: 12px;
+    letter-spacing: 1px;
+    display: inline-block;
+    color: white;
+    font-family: 'Roboto', sans-serif;
+}
+
+/* Responsive */
+
+@media only screen and (max-width: 991px) {
+    header p {
+        width: 100%;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    header {
+        width: 96%;
+        margin: 30px auto 100px auto;
+        text-align: center;
+    }
+
+    .whatIDo {
+        text-align: center;
+        width: 96%;
+        margin: 70px auto 10px align-self auto;
+    }
+    
+    .iAm {
+        visibility: hidden;
+    }
+
+}
+
